// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render properly 1`] = `
.emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-1 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-3 {
  clear: both;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-6 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #3A5DFF;
  border: 2px solid #3A5DFF;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-8 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-10 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-11 {
  padding-left: 0;
  color: #b3b3b3;
}

<fieldset
  className="emotion-0"
>
  <legend
    className="emotion-1"
  >
    Permissions
  </legend>
  <div
    className="emotion-2"
  >
    Tele Tele Scope
  </div>
  <div
    className="emotion-3"
  />
  <label
    className="emotion-4"
  >
    <div
      className="emotion-5"
    >
      <input
        className="emotion-6"
        defaultChecked={true}
        onClick={[Function]}
        type="checkbox"
        value="api"
      />
      <div
        className="emotion-7"
      >
        <svg
          className="emotion-8"
          data-file-name="checkmark.svg"
          height={20}
        />
      </div>
    </div>
    <div
      className="emotion-9"
    >
      <span
        className="emotion-10"
      >
        API
      </span>
      <span
        className="emotion-11"
      >
        Dude You're Getting A Telescope
      </span>
    </div>
  </label>
</fieldset>
`;

exports[`<CheckboxGroup /> should render properly 2`] = `
.emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-1 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-3 {
  clear: both;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-6 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-8 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-10 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-11 {
  padding-left: 0;
  color: #b3b3b3;
}

<fieldset
  className="emotion-0"
>
  <legend
    className="emotion-1"
  >
    Permissions
  </legend>
  <div
    className="emotion-2"
  >
    Tele Tele Scope
  </div>
  <div
    className="emotion-3"
  />
  <label
    className="emotion-4"
  >
    <div
      className="emotion-5"
    >
      <input
        className="emotion-6"
        defaultChecked={false}
        onClick={[Function]}
        type="checkbox"
        value="api"
      />
      <div
        className="emotion-7"
      >
        <svg
          className="emotion-8"
          data-file-name="checkmark.svg"
          height={20}
        />
      </div>
    </div>
    <div
      className="emotion-9"
    >
      <span
        className="emotion-10"
      >
        API
      </span>
      <span
        className="emotion-11"
      >
        Dude You're Getting A Telescope
      </span>
    </div>
  </label>
</fieldset>
`;
